Initial configuration setup to step 9 of guide: https://github.com/runelite/plugin-hub

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=No Hint-arrow
+author=JNCressey
+description=Completely remove the flashing yellow hint arrow, or let it only show for a set length of ticks.
+tags=accessibility
+plugins=com.nohintarrow.NoHintarrowPlugin
