--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
 displayName=No Hint-arrow
 author=JNCressey
 description=Completely remove the flashing yellow hint arrow, or let it only show for a set length of seconds.
-tags=accessibility
+tags=accessibility,epilepsy,hint,tutorial,marker
 plugins=com.nohintarrow.NoHintarrowPlugin
