--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
 displayName=No Hint-Arrow
 author=JNCressey
 description=Completely remove the flashing yellow hint arrow, or let it only show for a set length of seconds. Optional substitute marker.
-tags=accessibility,epilepsy,flashing,yellow,hint,arrow,tutorial,marker,pointer
+tags=accessibility,epilepsy,flashing,tutorial,arrow,marker
 plugins=com.nohintarrow.NoHintArrowPlugin
